--- a/css/style.css
+++ b/css/style.css
@@ -254,6 +254,10 @@ footer {
     margin: 15px;
 }
 
+.logoRedes {
+    width: 50px;
+}
+
 #metodosContacto {
     margin-top: 25px;
 }
@@ -570,5 +574,4 @@ footer {
         grid-template-rows: 110px auto 70px;
     }
 }
-
 
