--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ footer a:hover {
 }
 
 #bienvenida {
-  background-color: #fa8072;
+  background-image: linear-gradient(to bottom, #302e2e, #fa8072);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -100,6 +100,9 @@ footer a:hover {
   padding: 10px;
   margin-bottom: 15px;
   width: auto;
+}
+#tutorial .pasos li:hover {
+  color: #fa8072;
 }
 
 .unboxing {
@@ -177,6 +180,17 @@ footer a:hover {
   height: 160px;
   width: 150px;
   margin-bottom: 20px;
+  animation-duration: 5s;
+  animation-name: aparecer;
+  animation-iteration-count: 3;
+}
+@keyframes aparecer {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 #formulario {
