--- a/sass/paginas/_nosotros.scss
+++ b/sass/paginas/_nosotros.scss
@@ -14,6 +14,20 @@
         height: 160px;
         width: 150px;
         margin-bottom: 20px;
+
+        animation-duration: 5s;
+        animation-name: aparecer;
+        animation-iteration-count: 3;
+
+        @keyframes aparecer {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
+        }
+
     }
 }
 
