--- a/sass/paginas/_nosotros.scss
+++ b/sass/paginas/_nosotros.scss
@@ -8,6 +8,7 @@
         text-align: start;
         font-size: medium;
         margin: 20px 30px;
+        max-width: 1400px;
     }
 
     .libroNosotros {
@@ -15,7 +16,7 @@
         width: 150px;
         margin-bottom: 20px;
 
-        animation-duration: 5s;
+        animation-duration: 2s;
         animation-name: aparecer;
         animation-iteration-count: 3;
 
