--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body h1, body h2 {
 }
 body h1 {
   color: #f5f5f5;
+  margin-top: 20px;
 }
 body h2, body h3 {
   color: #fa8072;
@@ -34,6 +35,12 @@ header {
 }
 header #logo {
   width: 50px;
+}
+header .navbar-toggler {
+  border: 1.5px solid #fa8072;
+}
+header .navbar-toggler .navbar-toggler-icon {
+  background-color: #fa8072;
 }
 header .nav-link {
   background-color: #302e2e;
@@ -65,11 +72,11 @@ footer a:hover {
 }
 
 #bienvenida {
-  background-image: linear-gradient(to bottom, #302e2e, #fa8072);
+  background: linear-gradient(to bottom, #302e2e, #fa8072);
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 30px 20px;
+  margin: 20px;
   padding: 10px;
 }
 #bienvenida article #chicaLeyendo {
@@ -78,8 +85,8 @@ footer a:hover {
 }
 #bienvenida article .frase {
   font-size: medium;
-  font-weight: bold;
-  padding-top: 20px;
+  font-style: italic;
+  margin-top: 10px;
 }
 
 #tutorial {
@@ -143,23 +150,26 @@ footer a:hover {
   padding: 5px;
 }
 
-.card {
+.suscripciones {
+  display: flex;
+  flex-direction: column;
+}
+.suscripciones .card {
   height: auto;
   padding: 10px;
 }
-
-.descripcionSuscripciones .card-text {
+.suscripciones .descripcionSuscripciones .card-text {
   text-align: center;
+  text-wrap: wrap;
   font-size: medium;
 }
-.descripcionSuscripciones .precio {
+.suscripciones .descripcionSuscripciones .precio {
   font-family: "aboreto";
   color: white;
   font-size: xx-large;
   font-weight: bold;
 }
-
-.btn {
+.suscripciones .btn {
   font-family: "aboreto";
   font-weight: bold;
   border-radius: 10px;
@@ -175,12 +185,13 @@ footer a:hover {
   text-align: start;
   font-size: medium;
   margin: 20px 30px;
+  max-width: 1400px;
 }
 .sobreNosotros .libroNosotros {
   height: 160px;
   width: 150px;
   margin-bottom: 20px;
-  animation-duration: 5s;
+  animation-duration: 2s;
   animation-name: aparecer;
   animation-iteration-count: 3;
 }
@@ -193,18 +204,19 @@ footer a:hover {
   }
 }
 
+.contacto {
+  justify-self: center;
+}
+
 #formulario {
   display: flex;
   flex-direction: column;
-  align-self: center;
-  width: 90vw;
   padding: 15px;
   font-size: medium;
-  margin-left: 10px;
 }
 #formulario .elementoForm {
   margin-bottom: 10px;
-  width: 75vw;
+  width: 250px;
 }
 #formulario #nombre, #formulario #correo {
   height: 30px;
@@ -227,15 +239,17 @@ footer a:hover {
   background-color: #302e2e;
 }
 
+#metodosContacto {
+  margin-top: 20px;
+}
 #metodosContacto .redes {
   list-style-type: none;
+  padding-left: 0%;
   display: flex;
-  justify-content: center;
-  justify-items: center;
+  justify-content: space-evenly;
 }
 #metodosContacto .redes .logoRedes {
   width: 40px;
-  margin-inline: 5px;
 }
 
 .inicio {
@@ -364,6 +378,10 @@ footer {
   header #logo {
     width: 80px;
   }
+  #bienvenida {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
   #bienvenida h1 {
     font-size: xx-large;
   }
@@ -396,7 +414,7 @@ footer {
     font-size: xx-large;
   }
   header #logo {
-    width: 180px;
+    width: 140px;
   }
   #bienvenida article {
     display: flex;
@@ -411,7 +429,7 @@ footer {
   }
   #bienvenida article .frase {
     font-size: xx-large;
-    margin-left: 30px;
+    margin: 20px;
   }
   #tutorial {
     margin-left: 80px;
@@ -443,10 +461,11 @@ footer {
     margin-bottom: 20px;
   }
   .card .card-title {
-    font-size: xx-large;
+    font-size: x-large;
   }
   .card .card-text {
     font-size: large;
+    text-wrap: wrap;
   }
 }
 @media (min-width: 1200px) {
@@ -455,12 +474,16 @@ footer {
   }
   .card {
     width: 23%;
-    height: auto;
+    height: 750px;
     margin: auto;
     margin-top: 20px;
+    margin-bottom: 30px;
+  }
+  .card .card-title {
+    font-size: xx-large;
   }
   .card .card-text {
-    font-size: x-large;
+    font-size: large;
   }
 }
 @media (min-width: 700px) {
@@ -469,15 +492,16 @@ footer {
   }
   .suscripciones .card {
     width: 45%;
-    height: 450px;
+    height: 470px;
     margin: auto;
     margin-bottom: 20px;
   }
   .suscripciones .card .card-title {
-    font-size: xx-large;
+    font-size: x-large;
   }
   .suscripciones .card .card-text {
     font-size: large;
+    text-wrap: wrap;
   }
 }
 @media (min-width: 1200px) {
@@ -485,14 +509,14 @@ footer {
     grid-template-rows: 200px auto 80px;
   }
   .suscripciones .card {
+    height: 600px;
     width: 23%;
-    height: auto;
     margin: auto;
     margin-top: 20px;
     margin-bottom: 50px;
   }
   .suscripciones .card .card-text {
-    font-size: x-large;
+    font-size: large;
   }
 }
 @media (min-width: 700px) {
@@ -517,18 +541,28 @@ footer {
   .paginaContacto {
     grid-template-rows: 150px auto auto 80px;
   }
+  #formulario .elementoForm {
+    width: 500px;
+  }
+  #metodosContacto .redes {
+    display: flex;
+    justify-content: center;
+  }
   #metodosContacto .redes .logoRedes {
     width: 50px;
-    margin-inline: 15px;
+    margin-inline: 10px;
   }
 }
 @media (min-width: 1200px) {
   .paginaContacto {
     grid-template-rows: 200px auto 80px;
   }
+  #formulario .elementoForm {
+    width: 1000px;
+  }
   #metodosContacto .redes .logoRedes {
     width: 60px;
-    margin-inline: 25px;
+    margin-inline: 15px;
   }
 }
 
